--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -72,7 +72,7 @@
       <string>Weather Logo</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_4">
+    <widget class="QLabel" name="label_temperature">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -127,7 +127,7 @@
       <string>c</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_7">
+    <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
        <x>200</x>
@@ -140,7 +140,7 @@
       <string>Wind</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_8">
+    <widget class="QLabel" name="label_17">
      <property name="geometry">
       <rect>
        <x>200</x>
@@ -153,7 +153,7 @@
       <string>Humidity</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_9">
+    <widget class="QLabel" name="label_wind">
      <property name="geometry">
       <rect>
        <x>290</x>
@@ -166,7 +166,7 @@
       <string>20</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_10">
+    <widget class="QLabel" name="label_humidity_2">
      <property name="geometry">
       <rect>
        <x>290</x>
@@ -205,7 +205,7 @@
       <string>Country</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_13">
+    <widget class="QLabel" name="label_city">
      <property name="geometry">
       <rect>
        <x>430</x>
@@ -218,7 +218,7 @@
       <string>Chicago</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_14">
+    <widget class="QLabel" name="label_country">
      <property name="geometry">
       <rect>
        <x>430</x>
@@ -244,7 +244,7 @@
       <string>Real Feel</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_16">
+    <widget class="QLabel" name="label_feel">
      <property name="geometry">
       <rect>
        <x>120</x>
